<resources>
    <string name="app_name">Real Realty</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="description_firebase">firebase</string>
    <string name="email_password_title_text">Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify Email</string>
    <string name="reload">reload</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="auth_failed">Auth Failed</string>
    
    <string name="favorites_tile_full_address">%1$s\n%2$s, %3$s %4$s</string>
    <string name="favorites_tile_detail_snapshot">Beds: %1$s\tBaths: %2$s\t%3$s</string>

    <string name="title_home">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_more">More</string>
<!--  Morgage Calculator  -->
    <string name="calculate">Calculate</string>
    <string name="total_loan_amount">total loan amount</string>
    <string name="annual_interest_rate">annual interest rate</string>
    <string name="loan_duration_years">loan duration (years)</string>


    <string name="title_profile_house">My House</string>
    <string name="title_profile_agent">My Agent</string>
    <string name="title_profile_documents">My Documents</string>
    <string name="title_profile_preferences">My Preferences</string>
    <string name="title_mortgage_calculator">Mortgage Calculator</string>

    <string name="add_to_favorites">Add to favorites</string>
<!--Detail View-->
    <string name="image_of_house">Image of House</string>
    <string name="beds">Beds: </string>
    <string name="baths">Baths: </string>
    <string name="sqft">Square Footage: </string>
    <string name="lot_size">Lot Size: </string>
    <string name="year_built">Year Built: </string>
    <string name="property_type">Property Type: </string>
<!--    More View   -->
    <string name="mortgage_calculator">Mortgage Calculator</string>
    <string name="contact_us">Contact Us</string>
    <string name="our_team">Our Team</string>
    <string name="zillow">Zillow</string>
    <string name="sign_out">Sign Out</string>

    <string name="filler_address">123 Main St \nSeattle, WA 98101</string>
    <string name="filler_beds">Beds: 2</string>
    <string name="filler_baths">Baths: 2</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="content_description_profile_picture">profile picture</string>
    <string name="looks_like_you_dont_have_an_agent_yet">Looks like you do not have an agent yet...</string>

    <string name="my_house">My House</string>
    <string name="my_agent">My Agent</string>
    <string name="my_documents">My Documents</string>
    <string name="profile_preferences">Preferences</string>


    <string name="style_json">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
  </string>
    <string name="click_me">Click me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
