<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_search"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_more" />

</menu>