<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kochsj.realrealty.ui.search.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.kochsj.realrealty.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.kochsj.realrealty.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.kochsj.realrealty.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.kochsj.realrealty.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

<!--    PROFILE NAVIGATION  -->
    <fragment
        android:id="@+id/navigation_profile_house"
        android:name="com.kochsj.realrealty.ui.profile.house.MyHouseFragment"
        android:label="@string/title_profile_house"/>

    <fragment
        android:id="@+id/navigation_profile_agent"
        android:name="com.kochsj.realrealty.ui.profile.agent.AgentFragment"
        android:label="@string/title_profile_agent"
        tools:layout="@layout/fragment_profile_agent" />

    <fragment
        android:id="@+id/navigation_profile_documents"
        android:name="com.kochsj.realrealty.ui.profile.documents.DocumentsFragment"
        android:label="@string/title_profile_documents"
        tools:layout="@layout/fragment_profile_documents" />

    <fragment
        android:id="@+id/navigation_profile_preferences"
        android:name="com.kochsj.realrealty.ui.profile.preferences.PreferencesFragment"
        android:label="@string/title_profile_preferences"
        tools:layout="@layout/fragment_profile_preferences" />

<!--    MORE NAVIGATION     -->
    <fragment
        android:id="@+id/navigation_more_calculator"
        android:name="com.kochsj.realrealty.ui.more.calculator.MortgageCalculatorFragment"
        tools:layout="@layout/fragment_more_calculator" />
    <fragment
        android:id="@+id/navigation_more_contact_us"
        android:name="com.kochsj.realrealty.ui.more.contact_us.ContactUsFragment"
        tools:layout="@layout/fragment_more_contact_us" />
    <fragment
        android:id="@+id/navigation_more_our_team"
        android:name="com.kochsj.realrealty.ui.more.team.OurTeamFragment"
        tools:layout="@layout/fragment_more_our_team" />
    <fragment
        android:id="@+id/navigation_more_recently_viewed"
        android:name="com.kochsj.realrealty.ui.more.recent.RecentlyViewedFragment"
        tools:layout="@layout/fragment_more_recently_viewed" />
    <fragment
        android:id="@+id/navigation_more_settings"
        android:name="com.kochsj.realrealty.ui.more.settings.SettingsFragment"
        tools:layout="@layout/fragment_more_settings" />

</navigation>
