<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_navigation_map"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_profile_house"
        android:name="com.kochsj.realrealty.ui.search.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_profile_house" />

    <fragment
        android:id="@+id/navigation_profile_agent"
        android:name="com.kochsj.realrealty.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_profile_agent" />

    <fragment
        android:id="@+id/navigation_profile_documents"
        android:name="com.kochsj.realrealty.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_documents" />

    <fragment
        android:id="@+id/navigation_profile_preferences"
        android:name="com.kochsj.realrealty.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_profile_preferences" />

</navigation>
