<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/favorite_house_template"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    >

    <ImageView
        android:id="@+id/favorite_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image_of_house"
        android:src="@drawable/house_for_sale"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_address"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_beds"
            android:textColor="@android:color/holo_orange_dark"/>

    </LinearLayout>

</RelativeLayout>
